<resources>
    <string name="app_name">TopTrump</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviar_puntuacion_al_correo">Enviar puntuacion al correo</string>
    <string name="userimage">UserImage</string>
    <string name="username">UserName</string>
    <string name="preguntas_contestadas">Preguntas contestadas:</string>
    <string name="preguntas_corectas">Preguntas corectas:</string>
    <string name="usuarios_creados">Usuarios creados</string>
    <string name="hola">hola</string>
    <string name="imagen">imagen</string>
    <string name="radiobutton">RadioButton</string>
    <string name="respuesta">respuesta</string>
    <string name="nombre">nombre</string>
    <string name="descripcion">descripcion</string>
    <string name="pregunta">pregunta</string>
    <string name="enviar_respuesta">Enviar respuesta</string>
    <string name="administrar_usuarios">Administrar usuarios</string>
    <string name="administrar_cartas">Administrar cartas</string>
    <string name="imgcartas">imgCartas</string>
    <string name="imgusuarios">imgUsuarios</string>
    <string name="clave">Clave</string>
    <string name="enviar">Enviar</string>
    <string name="introduzca_clave_de_administrador">Introduzca clave de administrador:</string>
    <string name="titulo_permiso_estado">Estado del teléfono</string>
    <string name="mensaje_permiso_contactos">Este permiso es necesario para poder registrar la batería del teléfono móvil y avisar cuando el nivel de carga de esta sea baja</string>
    <string name="aceptar">aceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="administrador">Administrador</string>
    <string name="jugar">Jugar</string>
    <string name="perfil">Perfil</string>
    <string name="usuario">Usuario</string>
    <string name="elige_un_avatar">Elige un avatar</string>
    <string name="crearusuario">Crear Usuario</string>
    <string name="enviar_mail">Enviando email</string>
    <string name="guardar">Guardar</string>
    <string name="cambiar_avatar">Cambiar avatar</string>
    <string name="editar">Editar</string>
    <string name="usuarios">Usuarios</string>
    <string name="seleccionar_usuario">Seleccionar usuario</string>
    <string name="enviarpreguntas">Enviar Preguntas</string>
    <string name="tamaño">Tamaño del animal</string>
    <string name="peso">Peso del animal</string>
    <string name="velocidad">Velocidad del animal</string>
    <string name="evasion">Evasion del animal</string>
    <string name="metros">Metros</string>
    <string name="kilogramos">Kilogramos</string>
    <string name="kmH">Kilometros/hora</string>
    <string name="evaluar">Evaluar del 0 al 10</string>
    <string name="cambiar_imagen">Cambiar Imagen</string>
    <string name="url_imagen">Url imagen</string>
</resources>