<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomovil"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/imgCart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:contentDescription="@string/imagen"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/fondopregunta"
            android:gravity="center"
            android:text="@string/nombre"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvDescripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/fondopregunta"
            android:gravity="center"
            android:text="@string/descripcion"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPregunta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNombre" />

        <TextView
            android:id="@+id/tvPregunta"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/fondopregunta"
            android:gravity="center"
            android:text="@string/pregunta"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/etRespuesta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescripcion" />

        <Button
            android:id="@+id/btEnviar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/fondoboton"
            android:text="@string/enviar_respuesta"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRespuesta" />

        <EditText
            android:id="@+id/etRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:background="@drawable/fondoet"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/respuesta"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="#000000"
            android:textColorHint="#6C6C6C"
            app:layout_constraintBottom_toTopOf="@+id/btEnviar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPregunta" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.41997263" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
