<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayoutPreguntasCarta"
    android:background="@drawable/fondomovil"
    tools:context=".view.fragments.PreguntasCartaFragment" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbPreguntasFrgm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPregunt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamaño"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/tilPregunta1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tbPreguntasFrgm" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPregunta1"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#C5C5C5"
                app:boxBackgroundMode="outline"
                app:layout_constraintBottom_toTopOf="@+id/tvPregunt2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPregunt1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPregunta1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/metros"
                    android:inputType="number"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPregunt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/tilPregunta2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPregunta1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPregunta2"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#C5C5C5"
                app:boxBackgroundMode="outline"
                app:layout_constraintBottom_toTopOf="@+id/tvPregunt3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPregunt2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPregunta2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kilogramos"
                    android:inputType="number"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPregunt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velocidad"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/tilPregunta3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPregunta2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPregunta3"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#C5C5C5"
                app:boxBackgroundMode="outline"
                app:layout_constraintBottom_toTopOf="@+id/tvPregunt4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPregunt3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPregunta3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kmH"
                    android:inputType="number"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPregunt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evasion"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/tilPregunta4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPregunta3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPregunta4"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#C5C5C5"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/btPreguntas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPregunt4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPregunta4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/evaluar"
                    android:inputType="number"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btPreguntas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviarpreguntas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPregunta4" />
</androidx.constraintlayout.widget.ConstraintLayout>
