<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.RegistFragment">

    <TextView
        android:id="@+id/tvClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduzca_clave_de_administrador"
        app:layout_constraintBottom_toTopOf="@+id/tilClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilClave"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btEnvClav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clave"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btEnvClav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="@+id/tilClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilClave"
        app:layout_constraintTop_toTopOf="@+id/tilClave" />
</androidx.constraintlayout.widget.ConstraintLayout>